# docs/swagger.yaml
@@ -927,6 +927,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/requests.UpdatePostTitleRequest'
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
